--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Fetch Test</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="unknown_error">Unknown error</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="group_4">Group 4</string>
+    <string name="group_3">Group 3</string>
+    <string name="group_2">Group 2</string>
+    <string name="group_1">Group 1</string>
 </resources>
